# Optix_sphere

./: .gitmodules  ARCHITECTURE.md  CMakeLists.txt  README.md  pyproject.toml
assets/: 1  integrating_sphere_25.4_1.mtl
cmake/: dependencies.cmake  embed_ptx.cmake
examples/: basic_simulation.py  mesh_simulation.py  parameter_sweep.py
include/: device_params.h  scene_types.h  simulation_result.h
optix_sphere/: constants.h  material.cpp  material.h  simulator.cpp  simulator.h
optix_sphere/core/: device_buffer.h  optix_context.cpp  optix_context.h
optix_sphere/geometry/: fbx_loader.cpp  fbx_loader.h  mesh_loader.cpp  mesh_loader.h
optix_sphere/layered_media/: layered_medium.cuh  media_kernel.cuh  media_simulator.cu  media_simulator.cuh
optix_sphere/photon/: batch.cu  batch.cuh  batch.h  kernels.cuh  launchers.cu  launchers.h  sources.h
optix_sphere/python/: bindings.cpp
optix_sphere/scene/: scene.cpp  scene.h  scene_types.h
optix_sphere/simulation/: device_params.h  optix_context.cpp  optix_pipeline_builder.cpp  optix_pipeline_builder.h  optix_sbt_builder.cpp  optix_sbt_builder.h  path_tracer.cpp  path_tracer.h  simulation_result.h
optix_sphere/simulation/kernels/: intersection.cu  kernel_utils.cuh  radiance.cu  raygen.cu  shadow.cu  source_generators.cu
optix_sphere/theory/: theory.cpp  theory.h
optix_sphere/utils/: constant.h  vector_types.h
optix_sphere/utils/device/: core.cuh  device_buffer.cuh  math.cuh  optics.cuh  random.cuh
python/optix_sphere/: __init__.py
src/app/: main.cpp
src/core/: device_buffer.h  optix_context.cpp
src/python/: bindings.cpp
src/scene/: scene.cpp  scene.h
src/simulation/: forward_tracer.cu  kernels.cu  optix_pipeline_builder.cpp  optix_pipeline_builder.h  optix_sbt_builder.cpp  optix_sbt_builder.h  path_tracer.cpp  path_tracer.h
src/simulation/kernels/: kernel_utils.cuh  radiance.cu  raygen.cu  shadow.cu
src/theory/: theory.cpp  theory.h
tests/: main.cpp  test_layered_medium.cu  test_theory.cpp
validate/: plot_reflectance_sweep.py  reflectance_sweep.py  sweep_reflectance_0.01.csv  sweep_reflectance_1.csv  sweep_reflectance_10.csv  sweep_reflectance_5.csv  sweep_reflectance_no_ports.csv
